fix TestExecutorMainのバグ #54